--- a/PAGES/03c_functions/index.html
+++ b/PAGES/03c_functions/index.html
@@ -88,18 +88,18 @@ output     &#61; map&#40;x&#41; do a
                 end</code></pre></div></div><div class="output_in_modal"><div class="sign_output">Output in REPL</div><div class="mixed_output_inline"><div class="mixed_output_NoFormat"><div class="julia_line">julia&gt</div><code>output</code><br><pre><code class="plaintext code-output">3-element Vector{Int64}:
  3
  4
- 5</code></pre></div></div></div></div></div><p></p></details></div><p>Do-blocks also accept anonymous functions with multiple arguments, as shown below.</p><div class="hide_tab"><details open><summary><div class="closed_text"></div></summary><p></p><div class="tab_wrapper"><div class="tab_code_links"><button class="tablink first_tab active" data-id="">Via Compact Function</button> <button class="tablink" data-id="">Via Anonymous Function</button> <button class="tablink" data-id="">Via Do-Block Syntax</button></div><div data-id="" class="tabcontent active"><div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">x            &#61; &#91;1,2,3&#93;
-y            &#61; &#91;4,5,6&#93;
+ 5</code></pre></div></div></div></div></div><p></p></details></div><p>Do-blocks also accept anonymous functions with multiple arguments, as shown below.</p><div class="hide_tab"><details open><summary><div class="closed_text"></div></summary><p></p><div class="tab_wrapper"><div class="tab_code_links"><button class="tablink first_tab active" data-id="">Via Compact Function</button> <button class="tablink" data-id="">Via Anonymous Function</button> <button class="tablink" data-id="">Via Do-Block Syntax</button></div><div data-id="" class="tabcontent active"><div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">x               &#61; &#91;1,2,3&#93;
+y               &#61; &#91;4,5,6&#93;
+add_values&#40;a,b&#41; &#61; a &#43; b
 
-add_two&#40;a,b&#41; &#61; a &#43; b
-output       &#61; map&#40;add_two, x, y&#41;</code></pre></div></div><div class="output_in_modal"><div class="sign_output">Output in REPL</div><div class="mixed_output_inline"><div class="mixed_output_NoFormat"><div class="julia_line">julia&gt</div><code>output</code><br><pre><code class="plaintext code-output">3-element Vector{Int64}:
+output          &#61; map&#40;add_values, x, y&#41;</code></pre></div></div><div class="output_in_modal"><div class="sign_output">Output in REPL</div><div class="mixed_output_inline"><div class="mixed_output_NoFormat"><div class="julia_line">julia&gt</div><code>output</code><br><pre><code class="plaintext code-output">3-element Vector{Int64}:
  5
  7
- 9</code></pre></div></div></div></div><div data-id="" class="tabcontent"><div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">x        &#61; &#91;1,2,3&#93;
-y        &#61; &#91;4,5,6&#93;
+ 9</code></pre></div></div></div></div><div data-id="" class="tabcontent"><div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">x               &#61; &#91;1,2,3&#93;
+y               &#61; &#91;4,5,6&#93;
 
 
-output   &#61; map&#40;&#40;a,b&#41; -&gt; a &#43; b, x, y&#41;</code></pre></div></div><div class="output_in_modal"><div class="sign_output">Output in REPL</div><div class="mixed_output_inline"><div class="mixed_output_NoFormat"><div class="julia_line">julia&gt</div><code>output</code><br><pre><code class="plaintext code-output">3-element Vector{Int64}:
+output          &#61; map&#40;&#40;a,b&#41; -&gt; a &#43; b, x, y&#41;</code></pre></div></div><div class="output_in_modal"><div class="sign_output">Output in REPL</div><div class="mixed_output_inline"><div class="mixed_output_NoFormat"><div class="julia_line">julia&gt</div><code>output</code><br><pre><code class="plaintext code-output">3-element Vector{Int64}:
  5
  7
  9</code></pre></div></div></div></div><div data-id="" class="tabcontent"><div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">x        &#61; &#91;1,2,3&#93;
